--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Personal website of Jeremy Lenz, NYC web developer :)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+resume_link: http://bit.ly/jeremy-lenz-resume
 twitter_username: jeremy646
 github_username:  jeremylenz
 linkedin_username:  jeremy-lenz-7320b870
