--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: jeremy lenz at gmail
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website of Jeremy Lenz, NYC web developer :)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jeremylenz.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 resume_link: http://bit.ly/jeremy-lenz-resume
 twitter_username: jeremy646
 github_username:  jeremylenz
